--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,135 +1,204 @@
+body {
+	font-family: "Metropolis Regular";
+	background-color: transparent;
+	position: relative;
+}
 
-  
-  html, body {
-    padding:0;
-    margin:0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+.thumbnail {
+	padding: 0px;
+	border: 0px solid;
+}
+
+
+@font-face {
+	font-family: "Metropolis";
+	src: url("../fonts/metropolis-1920/metropolis-1920.otf");
+}
+
+
+@font-face {
+	font-family: "Metropolis Bold";
+	src: url("../fonts/metropolis-1920/Metropolis-Medium.otf");
+}
+
+@font-face {
+	font-family: "Metropolis Regular";
+	src: url("../fonts/metropolis-1920/Metropolis-Regular.otf");
+}
+
+
+.titulos {
+	font-family: "Metropolis Bold";
+	font-size: 2em;
+	padding: 2%;
+}
+
+.subtitulos {
+	font-family: "Metropolis Bold";
+	font-size: 1.5em;
+}
+
+.metropolis {
+	font-family: "Metropolis";
+}
+
+/* Colores */
+.naranja {
+	color: #ff4000;
+}
+
+.azul {
+	color: blue;
+}
+
+.blanco {
+	color:#FFF;
+}
+
+.big-letter {
+	font-size: 1.3em;
+}
+
+.ocultando {
+	display: none;
+}
+
+
+/* About me */
+.fondo-total {
+	background-image: url("../assets/piano.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	height: 100vh;
+	width: 110%;
+}
+
+
+/*Acerca de mi*/
+
+
+
+.cv {
+	margin-top: 10%;
+}
+
+
+
+
+/* Sección Proyectos*/
+
+.projects h2 {
+	padding-top: 10%;
+}
+.fondo-gris {
+	background-color: rgba(0, 0, 0, .8);
+}
+
+.gris {
+	color: rgba(0, 0, 0, .8);
+}
+
+
+
+.skills {
+	background-color: #ff4000;
+	margin-bottom: 2%;
+}
+
+.habilidades {
+	padding-bottom: 5%;
+}
+
+.blandas {
+	padding-top: 5%;
+}
+
+
+.btn.btn-default {
+	background: transparent;
+	border-radius: 20%;
+	border: 1px solid rgb(17, 15, 15);
+}
+
+.bar {
+  width: 10%;
+  height: 100%;
+  border-radius: 16px;
+  animation-name: increase;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes increase {
+  from {
+    width: 0%
   }
-  
-  h1 {
-    font-size: 4rem;
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 20%;
-    transform: translateX(-50%);
-    white-space: nowrap;
+  to {
+    width: 70%
   }
-  
-  .button {
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    height: 2.5rem;
-    padding-top: 1.3rem;
-    width: 15rem;
-    text-align: center;
-    color: #fff;
-    border: #fff solid 0.2rem;
-    font-size: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    transform: translateX(-50%);
-  }
-  
-  .split.left .button:hover {
-    background-color: var(--left-button-hover-color);
-    border-color: var(--left-button-hover-color);
-  }
-  
-  .split.right .button:hover {
-    background-color: var(--right-button-hover-color);
-    border-color: var(--right-button-hover-color);
-  }
-  
-  .container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: var(--container-bg-color);
-  }
-  
-  .split {
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .split.left {
-    left:0;
-    background: url('https://www.utel.edu.mx/blog/contaduria-en-linea/wp-content/uploads/2015/06/shutterstock_289373273.jpg') center center no-repeat;
-    background-size: cover;
-  }
-  
-  .split.left:before {
-    position:absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: var(--left-bg-color);
-  }
-  
-  .split.right {
-    right:0;
-    background: url('https://image.ibb.co/m3ZbRb/programmer.png') center center no-repeat;
-    background-size: cover;
-  }
-  
-  .split.right:before {
-    position:absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: var(--right-bg-color);
-  }
-  
-  .split.left, .split.right, .split.right:before, .split.left:before {
-    transition: var(--speed) all ease-in-out;
-  }
-  
-  .hover-left .left {
-    width: var(--hover-width);
-  }
-  
-  .hover-left .right {
-    width: var(--other-width);
-  }
-  
-  .hover-left .right:before {
-    z-index: 2;
-  }
-  
-  
-  .hover-right .right {
-    width: var(--hover-width);
-  }
-  
-  .hover-right .left {
-    width: var(--other-width);
-  }
-  
-  .hover-right .left:before {
-    z-index: 2;
-  }
-  
-  @media(max-width: 800px) {
-    h1 {
-      font-size: 2rem;
-    }
-  
-    .button {
-      width: 12rem;
-    }
-  }
-  
-  @media(max-height: 700px) {
-    .button {
-      top: 70%;
-    }
-  }
+}
+
+
+
+footer.page-footer {
+	margin-top: 0px;
+	padding-top: 20px;
+	background-color: rgba(0, 0, 0, .8);
+
+}
+
+
+
+body {
+  margin: 0;
+  font:normal 75% Arial, Helvetica, sans-serif;
+}
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+
+
+.contenedor {
+  position: relative;
+  width: 100%;
+}
+.mini-icono {
+	height: 50px;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, .8);
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: .5s ease;
+}
+
+.contenedor:hover .overlay {
+  width: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
