--- a/style/style.css
+++ b/style/style.css
@@ -378,7 +378,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-/* estilos detalle de proyecto */
+/* estilos detalle de proyecto
 .blog-card {
   display: flex;
   flex-direction: column;
@@ -568,4 +568,4 @@ body::-webkit-scrollbar-thumb {
 .panel-body {
   padding: 20px 10px;
   border-top: 1px solid #ebebeb;
-}
+} */
